/*
** Copyright 2022 Centreon
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
**
** For more information : contact@centreon.com
*/

syntax = "proto3";

import "proto_header.proto";

package com.centreon.broker;


message Comment {
    BBDOHeader header = 1;

    enum Src {
        INTERNAL = 0;
        EXTERNAL = 1;
    }

    enum Type {
        NO_TYPE = 0;
        HOST = 1;
        SERVICE = 2;
    }

    enum EntryType {
        NO_ENTRY_TYPE = 0;
        USER = 1;
        DOWNTIME = 2;
        FLAPPING = 3;
        ACKNOWLEDGMENT = 4;
    }

    string author = 2;
    Type type = 3;
    string data = 4;
    uint64 deletion_time = 5;
    uint64 entry_time = 6;
    EntryType entry_type = 7;
    uint64 expire_time = 8;
    bool expires = 9;
    uint64 host_id = 10;
    uint64 internal_id = 11;
    bool persistent = 12;
    uint64 instance_id = 13;
    uint64 service_id = 14;
    Src source = 15;
  
}